# toltek-stack-instance

./: .gitignore  Makefile  README.md  SECRETS.md  docker-compose.yml  pyproject.toml
.github/: deploy-cloud-run-jobs.yml
_deployment/: DEPLOYMENT.md
infrastructure/docker/: Dockerfile
src/toltek/: __init__.py  cli.py
src/toltek/extraction/pipelines/: google_sheets_pipeline.py  main.py  weather_api_pipeline.py
src/toltek/extraction/sources/: __init__.py  weather_api_source.py
src/toltek/transformation/: .user.yml  dbt_project.yml  profiles.yml
terraform/: main.tf  variables.tf
terraform/environments/dev/: terragrunt.hcl
terraform/environments/folder/: terragrunt.hcl
terraform/environments/prd/: terragrunt.hcl
terraform/modules/artifact-registry/: main.tf  outputs.tf  variables.tf
terraform/modules/folder/: main.tf  outputs.tf  variables.tf
terraform/modules/service-account/: README.md  main.tf  outputs.tf  variables.tf
