[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toltek-data-stack"
version = "1.0.0"
description = "Data stack for Toltek"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Toltek Data Team", email = "data@example.com"}
]
keywords = ["data", "pipeline", "etl", "bigquery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core pipeline
    "dlt[bigquery]>=0.4.12",
    "dbt-core==1.7.0",
    "dbt-bigquery==1.7.0",
    
    # Google Cloud
    "google-cloud-bigquery>=3.13.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-secret-manager>=2.16.4",
    "google-api-python-client>=2.108.0",
    "google-auth-oauthlib>=1.1.0",
    
    # Data processing
    "pandas>=2.1.3",
    "pyarrow>=14.0.1",
    
    # HTTP clients
    "httpx>=0.25.2",
    "requests>=2.31.0",
    
    # Configuration & utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["toltek"]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "ruff>=0.1.6",
]

[project.scripts]
toltek-pipeline = "toltek.extraction.pipelines.main:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | target
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["toltek"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dlt.*",
    "dbt.*",
    "google.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"